--- a/libs/modules/body.less
+++ b/libs/modules/body.less
@@ -4,8 +4,6 @@
  * Global styles and overrides
  */
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
-
 html,
 body {
     font-family:        'Open Sans', sans-serif;
@@ -15,7 +13,7 @@ body {
 }
 
 section {
-    //border-top: 1px solid @gray-6;
+    //border-top: 0px solid @gray-6;
     margin-top: @box-spacing*2.5;
 }
 
@@ -24,7 +22,7 @@ section {
     padding: 0 !important;
     max-width: 1024px !important;
 }
-#main {
+.main-content__right {
     //padding: 0 2rem 0 4rem;
     width: 70%;
 }
@@ -35,4 +33,19 @@ section {
 
 .side-nav, .beta-extent-switcher {
     width: 30% !important;
+}
+
+.related-content {
+    .callout(@callout-border: @inventive-teal, @callout-background: @white, @callout-headings: @inventive-teal);
+    .callout--border;
+    border-width: 8px 1px 1px 1px;
+}
+
+.beta .main-container h3 {
+    margin-top: 0 !important;
+}
+
+.beta-extent-switcher__heading {
+    font-size: @font-size-base !important;
+    margin-top: 0 !important;
 }
