--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -90,6 +90,7 @@
 .callout--border--left {
 	border-left-width: @box-spacing/2;
 	padding-left: @box-spacing-horizontal;
+    //border-radius: @box-spacing/2 0 0 @box-spacing/2;
 }
 
 /**
