--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -7,6 +7,7 @@ button,
 input[type=submit],
 input[type=reset],
 input[type=button] {
+    cursor: pointer;
     border-radius: @form-border-radius;
     background-color: @beta-aqua-light;
     border: none;
