--- a/libs/existing/inc/main-content.less
+++ b/libs/existing/inc/main-content.less
@@ -8,7 +8,7 @@
 
 .main-content--full-width {
     max-width: 60em;
-    width: 80%;
+    //width: 80%;
 
     @media (max-width: @screen-sm-max ) {
         max-width: none;
@@ -18,7 +18,7 @@
 
 // @todo This needs renamed
 .articleContent {
-    width: 80%;
+    //width: 80%;
 
      @media (max-width: @screen-sm-max ) {
         width: auto;
