Compiled all form files into one
- Merged all form less files, still need to sort through and tidy up

--- a/libs/site.less
+++ b/libs/site.less
@@ -1,3 +1,6 @@
+/* Vendor files */
+@import "vendors/normalize";
+
 /* Override files */
 //@import "base/body";
 @import "styleguide/guide";
@@ -17,9 +20,6 @@
 @import "base/helpers";
 // @import "base/base"; // This file has not been updated as shouldn't have been included
 
-/* Vendor files */
-@import "vendors/normalize";
-
 // Existing styles
 	//@import "existing/inc/magic-numbers";
 	//@import "existing/inc/mixins-flex-box";
@@ -32,8 +32,8 @@
 	@import "existing/inc/highlight";
 
 	//@import "existing/inc/buttons"; // Moved to base
-	@import "existing/inc/forms";
-	@import "existing/inc/forms-v2";
+	//@import "existing/inc/forms";
+	//@import "existing/inc/forms-v2";
 
 
 	@import "existing/inc/framework";
