--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -7,8 +7,25 @@
 // Restyle and baseline non-control form elements.
 //
 // 'Borrowed' from Bootstrap v4
-
+//
 // Basic form styling
+
+form {
+    .invalid {
+        display: none;
+        color: @beta-red;
+        padding-top: @box-spacing/4;
+    }
+    .valid {
+        display: none;
+        color: @beta-green;
+        padding-top: @box-spacing/4;
+    }
+}
+
+form small {
+    color: @gray-3;
+}
 
 fieldset {
     padding: 0;
@@ -25,18 +42,23 @@ legend {
     margin-bottom: @line-height-computed;
     font-size: (@font-size-base * 1.5);
     line-height: inherit;
-    color: @legend-color;
+    color: @heritage-blue;
     border: 0;
     border-bottom: 1px solid @heritage-blue;
-    font-size: 1.2em;
-    font-weight: 600;
+    font-size: @font-size-h3;
+    font-weight: @font-weight-bold;
 }
 
-label {
+label,
+.form__label {
     display: inline-block;
     max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
-    margin-bottom: 5px;
+    //margin-bottom: 5px;
     font-weight: bold;
+}
+
+.form__label--hidden {
+    .screenreader;
 }
 
 textarea,
@@ -53,7 +75,10 @@ input[type=search] {
     -webkit-appearance: none;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    width: 70%
+    width: 70%;
+    &.search--full-width {
+       width: 100%;
+    }
 }
 
 input[type=checkbox] + label {
@@ -65,9 +90,6 @@ input[type=text][size="1"] {
     width: 3em;
 }
 
-input[type=search].search--full-width {
-    width: 100%;
-}
 
 select {
     padding: .2em;
@@ -99,33 +121,9 @@ select[size] {
     height: auto;
 }
 
-//
-// BEGIN STYLES
-//
-
-form {
-    //.callout( @white, @gray-7 );
-    //.callout--border;
-    //border-width: 3px;
-    .invalid {
-        display: none;
-        color: @beta-red;
-        padding-top: @box-spacing/4;
-    }
-    .valid {
-        display: none;
-        color: @beta-green;
-        padding-top: @box-spacing/4;
-    }
-}
-
-form small {
-    color: @gray-3;
-}
-
+textarea,
 input,
-select,
-textarea {
+select {
     border: 1px solid @gray-6;
 }
 
@@ -136,6 +134,7 @@ textarea {
 
 input[type="email"],
 input[type="password"],
+input[type="text"],
 textarea,
 select {
     width: 100%;
@@ -163,6 +162,130 @@ input[type="file"] {
     border: none;
     width: 100%;
     outline: none;
+}
+
+output {
+    display: block;
+    padding-top: 11px;
+    font-size: 16px;
+    line-height: 1.6;
+    color: @black;
+}
+
+/**********************************************************************/
+// Common form controls
+//
+// Shared size and type resets for form controls. Apply `.form__field` to any
+// of the following form controls:
+//
+// select
+// textarea
+// input[type="text"]
+// input[type="password"]
+// input[type="datetime"]
+// input[type="datetime-local"]
+// input[type="date"]
+// input[type="month"]
+// input[type="time"]
+// input[type="week"]
+// input[type="number"]
+// input[type="email"]
+// input[type="url"]
+// input[type="search"]
+// input[type="tel"]
+// input[type="color"]
+
+.form__field {
+    display: block;
+    width: 100%;
+    // Make inputs at least the height of their button counterpart
+    // (base line-height + padding-top + padding-bottom + border)
+    height: 37px;
+    padding: 5px 10px;
+    font-size: 16px;
+    line-height: 1.6;
+    color: @black;
+    background-color: @white;
+    background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+    border: 1px solid #ccc;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+
+    // Customize the `:focus` state to imitate native WebKit styles.
+    &:focus{
+        border-color: #66afe9;
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+        outline: 0 none;
+    }
+
+    /*
+    // Placeholder
+    @include placeholder;
+
+    // Disabled and read-only inputs
+    //
+    // HTML5 says that controls under a fieldset > legend:first-child won't be
+    // disabled if the fieldset is disabled. Due to implementation difficulty,
+    // we don't honor that edge case; we style them as disabled anyway.
+    &[disabled],
+    &[readonly],
+    fieldset[disabled] & {
+        cursor: $cursor-disabled;
+        background-color: $field-bg-disabled;
+        opacity: 1; // iOS fix for unreadable disabled content
+    }
+    */
+    // [converter] extracted textarea& to textarea.form__field
+}
+
+// Small fields for day, month and year.
+.form__field--day,
+.form__field--month {
+    width: 4em;
+}
+.form__field--year {
+    width: 4.5em;
+}
+
+// Small field for time.
+.form__field--time {
+    width: 6em;
+}
+
+// Reset height for `textarea`s
+textarea.form__field {
+    height: auto;
+}
+
+/**********************************************************************
+ * Special styles for iOS temporal inputs
+ *
+ * In Mobile Safari, setting `display: block` on temporal inputs causes the
+ * text within the input to become vertically misaligned. As a workaround, we
+ * set a pixel line-height that matches the given height of the input, but only
+ * for Safari.
+ */
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    input[type="date"],
+    input[type="time"],
+    input[type="datetime-local"],
+    input[type="month"] {
+        line-height: 37px;
+    }
+    
+    input[type="date"].form__field--sm,
+    input[type="time"].form__field--sm,
+    input[type="datetime-local"].form__field--sm,
+    input[type="month"].form__field--sm {
+    }
+
+    input[type="date"].form__field--lg,
+    input[type="time"].form__field--lg,
+    input[type="datetime-local"].form__field--lg,
+    input[type="month"].form__field--lg {
+    }
+    
 }
 
 /* Overrides 'Choose file' button
@@ -276,6 +399,527 @@ input[type="file"]::before {
     border: none;
     resize: none;
 }
+
+.form {
+    margin: 1em 0;
+}
+
+
+.form__row, .form__group {
+    display: block; // This can be added to labels
+    margin-bottom: 1em;
+}
+
+.form__button-row {
+    // For big submit buttons
+    margin-top: 1em;
+    width: 100%;
+}
+
+.form--table {
+    display: table;
+    width: 100%;
+
+    & > .form__row {
+        display: table-row;
+
+        & > .form__label, & > label {
+            display: table-cell;
+            white-space: nowrap;
+            padding: 0 1em 1em 0;
+        }
+
+        & > .form__control {
+            display: table-cell;
+            width: 100%;
+            padding-bottom: 1em;
+        }
+    }
+
+    @media (max-width: @screen-xs-max) {
+        display: block;
+
+        & > .form__row {
+            display: block;
+
+            & > .form__label, & > label {
+                display: block;
+                white-space: normal;
+                padding: 0;
+            }
+
+            & > .form__control {
+                display: block;
+                width: 100%;
+            }
+        }
+    }
+}
+
+.form__radio-list {
+    border: none;
+    margin: 1em 0 0 0;
+    padding: 0;
+
+    & > legend {
+        font-size: 1em;
+    }
+}
+
+.form__radio-item {
+    display: block;
+}
+
+.form__radio,
+.form__checkbox {
+    position: relative;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    label {
+        // Ensure the input doesn't jump when there is no text
+        min-height: 25px;
+        padding-left: 25px;
+        margin-bottom: 0;
+        font-weight: normal;
+        cursor: pointer;
+    }
+}
+.form__radio input[type="radio"],
+.form__radio-inline input[type="radio"],
+.form__checkbox input[type="checkbox"],
+.form__checkbox-inline input[type="checkbox"] {
+    position: absolute;
+    margin-left: -(25px);
+    margin-top: 6px \9;
+}
+
+// Radios and checkboxes on same line.
+// See also the .form__*-inline--boxed styles above for a variation.
+.form__radio-inline,
+.form__checkbox-inline {
+    display: inline-block;
+    padding-left: 25px;
+    padding-right: 10px;
+    margin-bottom: 0;
+    vertical-align: middle;
+    font-weight: normal;
+    cursor: pointer;
+}
+.form__radio-inline + .form__radio-inline,
+.form__checkbox-inline + .form__checkbox-inline {
+    margin-top: 0;
+    margin-left: 10px; // space out consecutive inline controls
+}
+
+.form__radio,
+.form__checkbox {
+    position: relative;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    label {
+        // Ensure the input doesn't jump when there is no text
+        min-height: 25px;
+        padding-left: 25px;
+        margin-bottom: 0;
+        font-weight: normal;
+        cursor: pointer;
+    }
+}
+.form__radio input[type="radio"],
+.form__radio-inline input[type="radio"],
+.form__checkbox input[type="checkbox"],
+.form__checkbox-inline input[type="checkbox"] {
+    position: absolute;
+    margin-left: -(25px);
+    margin-top: 6px \9;
+}
+
+// Radios and checkboxes on same line.
+// See also the .form__*-inline--boxed styles above for a variation.
+.form__radio-inline,
+.form__checkbox-inline {
+    display: inline-block;
+    padding-left: 25px;
+    padding-right: 10px;
+    margin-bottom: 0;
+    vertical-align: middle;
+    font-weight: normal;
+    cursor: pointer;
+}
+.form__radio-inline + .form__radio-inline,
+.form__checkbox-inline + .form__checkbox-inline {
+    margin-top: 0;
+    margin-left: 10px; // space out consecutive inline controls
+}
+
+// BOXED RADIOS AND CHECKBOXES.
+// Put the control and the label inside a full-width coloured box.
+.form__radio--boxed,
+.form__checkbox--boxed,
+.form__radio-inline--boxed,
+.form__checkbox-inline--boxed {
+    background: none repeat scroll 0 0 #fff;
+    border: 1px solid transparent;
+
+    &:not(.is-disabled):hover {
+        background: none repeat scroll 0 0 #eff3f3;
+        border-color: #ccc;
+    }
+
+    > label {
+        padding-left: (15px + 25px);
+        width: 100%;
+    }
+
+    &.is-selected {
+        background: none repeat scroll 0 0 #b8e3df;
+
+        &:hover {
+            border-color: transparent;
+            background: none repeat scroll 0 0 #b8e3df;
+        }
+    }
+}
+.form__radio--boxed,
+.form__checkbox--boxed {
+    width: 100%;
+
+    > .form__radio__desc,
+    > .form__checkbox__desc {
+        padding-left: (15px + 25px);
+        padding-top: 0;
+        margin-top: -(10px);
+    }
+}
+
+.form__radio-inline--boxed,
+.form__checkbox-inline--boxed {
+    padding-top: 5px;
+    padding-left: (10px + 25px);
+    padding-bottom: 5px;
+}
+
+// We don't want spaces between .*--boxed and .box.js-revealable's following
+// them. Just adding negative top margin looks odd when it's revealed.
+// So, we're trying this:
+.form__radio--boxed + .box.js-revealable,
+.form__checkbox--boxed + .box.js-revealable {
+    position:      relative;
+    top:           -(10px);
+    margin-bottom: -(10px);
+}
+
+// Variations of the above styles when they appear within different boxes.
+
+.box--1 {
+    .form__radio--boxed,
+    .form__checkbox--boxed,
+    .form__radio-inline--boxed,
+    .form__checkbox-inline--boxed {
+        // Standard style by default.
+
+        &.is-selected {
+            background: none repeat scroll 0 0 #fff;
+            // Don't add a border or it'll look odd if immediately followed by
+            // a .box--2 revealable. (eg ESA form distance questions.)
+        }
+    }
+}
+
+.box--2 {
+    .form__radio--boxed,
+    .form__checkbox--boxed,
+    .form__radio-inline--boxed,
+    .form__checkbox-inline--boxed {
+        background: #eee;
+
+        &:hover {
+            border-color: #ccc;
+        }
+
+        &.is-selected {
+            border-color: #ccc;
+            background: #ccc;
+        }
+    }
+}
+
+// Apply same disabled cursor tweak as for inputs
+// Some special care is needed because <label>s don't inherit their parent's
+// `cursor`.
+// Note: Neither radios nor checkboxes can be readonly.
+input[type="radio"],
+input[type="checkbox"] {
+    &[disabled] {
+        cursor: not-allowed;
+    }
+}
+
+// These classes are used directly on <label>s
+.form__radio-inline,
+.form__checkbox-inline {
+    &.is-disabled {
+        color: #999;
+        cursor: not-allowed;
+    }
+}
+// These classes are used on elements with <label> descendants
+.form__radio,
+.form__checkbox {
+    cursor: pointer;
+
+    &.is-disabled {
+        cursor: not-allowed;
+        color: #999;
+        label {
+            cursor: not-allowed;
+        }
+    }
+}
+
+.panel--a {
+    .form__radio--boxed,
+    .form__checkbox--boxed,
+    .form__radio-inline--boxed,
+    .form__checkbox-inline--boxed {
+        background: #eee;
+
+        &:hover {
+            background: #ccc;
+        }
+
+        &.is-selected {
+            border-color: #ccc;
+        }
+    }
+}
+
+
+.form--inline-group {
+    .form__group {
+        display: inline-block;
+    }
+
+    @media (max-width: @screen-sm-min) {
+        display: table;
+        margin-bottom: (1em / 2);
+
+        .form__group {
+            display: table-cell;
+            margin-bottom: 0;
+            vertical-align: middle;
+        }
+
+        .form__label {
+            /* Note: If you make the label visible, things might get screwy in IE8. */
+            .screenreader;
+        }
+
+        .form__hint {
+            display: none;
+        }
+
+        .form__field {
+            display: inline-block;
+            width: auto;
+            vertical-align: middle;
+            margin-right: 0;
+        }
+
+        .button {
+            display: table-cell;
+            padding: 1px 3px 2px 1px;
+
+            .fa-stack {
+                margin-left: 0;
+            }
+        }
+
+        .button__label {
+            .screenreader;
+        }
+    }
+ }
+
+/**********************************************************************
+ * Help text
+ *
+ * Apply to any element you wish to create light text for placement immediately
+ * below a form control. Use for general help, formatting, or instructional
+ * text.
+ */
+.form__help {
+    color: #666;
+    margin-bottom: 5px;
+}
+
+// For 'required' or 'optional' hints.
+.form__hint {
+    color: #999;
+    display: inline-block;
+    font-weight: 400;
+    margin-left: 2px;
+
+    // Hasty fix; don't want to show 'required' markers on Pension Credit
+    // Checker, ESA Quick Checker, etc.
+    .panel & {
+        display: none;
+    }
+}
+
+.form__error {
+    color: #c02f43;
+    display: block;
+    font-weight: 400;
+    margin-top: 5px;
+}
+
+/**********************************************************************
+ * Static fields.
+ */
+
+.form__field--static {
+    max-width: 100%;
+    margin-bottom: 5px;
+    display: block;
+}
+
+// Custom dropdown icons
+.select--custom-icon() {
+
+    display: inline-block;
+    overflow: hidden; // Hide the arrow
+    vertical-align: middle;
+
+    & > select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        border: 0; //If you want a border set it on the parent
+        background: transparent;
+        padding: .2em;
+
+        // We need to push the pointer off the side so it is hidden in the overflow
+        // In webkit / blink there is no pointer to move
+        // In IE the padding is on the outside of the pointer, but in Firefox it is on the inside
+        // In IE8 and below we cannot move the pointer
+
+        // The width, plus the pointer, plus the padding (for IE9+)
+        // This needs to be at least 1.2em to hide the pointer in IE
+        // (In our case this is therefore 1em + .2em padding)
+        // In <=IE8 this will be ignored
+        width: calc( ~"100% + 1.2em" );
+
+        // The image width plus some padding so the text isn't against the arrow in Blink/Webkit
+        // In IE/Firefox there will be extra space between the text and arrow due to the native arrow
+        // In <=IE8 this will be ignored
+        margin: 0 calc( ~"33px + .2em" ) 0 0;
+
+        // For chrome - the outline is cut off on the right so hide it completely */
+        outline: none;
+
+        /* The right positioning is the extra width from above
+               In <=IE8 this will be ignored as we've used the four value poitioning syntax
+            */
+    }
+}
+
+.custom-dropdown {
+    .select--custom-icon;
+    position: relative;
+    width: 85%;
+    float: left;
+    background: @grey;
+
+    & > i {
+        position: absolute;
+        right: 0;
+        top: 0;
+        background: @blue;
+        color: white;
+        padding: 0 .2em;
+        font-size: 1.3em;
+        pointer-events: none; 
+        &:before {
+            padding: 0;
+        }
+    }
+}
+
+// If pointer events aren't supported hide the custom dropdown
+.no-pointer-events .custom-dropdown > i {
+    display: none;
+}
+
+// Overrider attibute selector
+input.custom-dropdown__button {
+    margin-left: 1%;
+    width: 14%;
+    float: left;
+    border-radius: 0;
+    padding: .2em;
+}
+
+/* Search fields used in blocks */
+.search-inline {
+    display: table;
+    margin: 1em 0;
+
+    & > label {
+        display: block;
+        width: 5em;
+        font-weight: bold;
+    }
+}
+
+.search-inline__field {
+    display: table-cell;
+    width: 100%;
+    padding-right: .5em;
+   
+    & > input {
+         width: 100%;
+    }
+}
+
+.search-inline__button {
+    display: table-cell;
+
+    & > input, & > button {
+        padding: .2em .6em;
+    }
+}
+
+.search-inline--hide-label {
+
+    & > label {
+        .screenreader;
+    }
+}
+
+
+.checkbox-radio-inner input[type="radio"],
+.checkbox-radio-inner input[type="checkbox"] {
+    position: absolute;
+}
+.checkbox-radio-inner label {
+    display: inline-block;
+    margin-left: 1em;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /*
  * Old form styles
