--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -60,8 +60,8 @@ h6 {
     line-height:    @line-height-heading;
     color:          @heading-primary-color;
     font-weight:    @font-weight-bolder;
-    margin-top:     0.75em;
-    margin-bottom:  0.75em;
+    margin-top:     1em;
+    margin-bottom:  0.6em;
 }
 
 h1 {
@@ -79,22 +79,22 @@ h2 {
 
 h3 {
     font-size:      @font-size-h3;
-    font-weight:    600 !important;
+    font-weight:    @font-weight-bold !important;
 }
 
 h4 {
     font-size:      @font-size-h4;
-    font-weight:    600 !important;
+    font-weight:    @font-weight-bold !important;
 }
 
 h5 {
     font-size:      @font-size-h5;
-    font-weight:    600 !important;
+    font-weight:    @font-weight-bold !important;
 }
 
 h6 {
     font-size:      @font-size-h5;
-    font-weight:    600 !important;
+    font-weight:    @font-weight-bold !important;
 }
 
 h1 + h2,
