--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -48,14 +48,14 @@
 @font-size-largest:         		2.3rem;
 @font-size-larger:          		1.8rem;
 @font-size-large:           		1.5rem;
-@font-size-medium:          		1.2rem;
+@font-size-medium:          		1.3rem;
 @font-size-base:            		1rem;
 @font-size-small:           		0.875rem;
 
 @font-size-h1:      				@font-size-largest;
 @font-size-h2:      				@font-size-larger;
-@font-size-h3:      				@font-size-large;
-@font-size-h4:      				@font-size-medium;
+@font-size-h3:      				@font-size-medium;
+@font-size-h4:      				@font-size-base;
 @font-size-h5:      				@font-size-base;
 
 
