--- a/libs/existing/inc/main-nav.less
+++ b/libs/existing/inc/main-nav.less
@@ -12,7 +12,7 @@
     .clearfix;
     background-color:@blue;
     // Chrome messes up the spacing without this
-    margin-bottom: 1em;
+    //margin-bottom: 1em;
 }
 
 html[lang="en-SCT"] .main-nav {
