--- a/libs/site.less
+++ b/libs/site.less
@@ -78,9 +78,9 @@
 	@import "existing/inc/tablesort";
 	//@import "existing/inc/decision-tree";
 	//@import "existing/inc/staff";
-	@import "existing/inc/twitter";
-	@import "existing/inc/bureau-search";
-	@import "existing/inc/environment-marker";
+	//@import "existing/inc/twitter";
+	//@import "existing/inc/bureau-search";
+	//@import "existing/inc/environment-marker";
 
 	// Beta files
 		//@import "existing/inc/beta/colors";
@@ -138,4 +138,9 @@
 @import "modules/references";
 @import "modules/episerver";
 @import "modules/members";
+@import "modules/bureau-search";
+
+
+@import "modules/twitter";
+@import "modules/environment-marker";
 
