--- a/libs/site.less
+++ b/libs/site.less
@@ -74,8 +74,8 @@
 	@import "existing/inc/toc";
 	@import "existing/inc/letter";
 	@import "existing/inc/accordion";
-	@import "existing/inc/revealable";
-	@import "existing/inc/tablesort";
+	//@import "existing/inc/revealable";
+	//@import "existing/inc/tablesort";
 	//@import "existing/inc/decision-tree";
 	//@import "existing/inc/staff";
 	//@import "existing/inc/twitter";
@@ -120,6 +120,8 @@
 @import "modules/cab-forms";
 @import "modules/callout";
 @import "modules/collapse";
+@import "modules/revealable";
+@import "modules/tablesort";
 @import "modules/nav-steps";
 @import "modules/navigation";
 @import "modules/panels";
@@ -139,8 +141,5 @@
 @import "modules/episerver";
 @import "modules/members";
 @import "modules/bureau-search";
-
-
 @import "modules/twitter";
 @import "modules/environment-marker";
-
