--- a/libs/site.less
+++ b/libs/site.less
@@ -40,16 +40,16 @@
 
 	// Modules
 	@import "existing/inc/cookie-monster";
-	@import "existing/inc/skip-nav";
+	//@import "existing/inc/skip-nav";
 	@import "existing/inc/main-nav";
 	//@import "existing/inc/breadcrumb";
 	@import "existing/inc/section-notice";
 	@import "existing/inc/main-content";
 	@import "existing/inc/page-info";
 	@import "existing/inc/side-nav";
-	@import "existing/inc/side-tags";
-	@import "existing/inc/side-links";
-	@import "existing/inc/side-chat";
+	//@import "existing/inc/side-tags";
+	//@import "existing/inc/side-links";
+	//@import "existing/inc/side-chat";
 	@import "existing/inc/calls-for-evidence";
 	@import "existing/inc/extent-switcher";
 	@import "existing/inc/feed";
@@ -143,3 +143,6 @@
 @import "modules/bureau-search";
 @import "modules/twitter";
 @import "modules/environment-marker";
+@import "modules/skip-nav";
+@import "modules/side-links";
+@import "modules/side-chat";
