--- a/libs/modules/cookie-monster.less
+++ b/libs/modules/cookie-monster.less
@@ -1,4 +1,10 @@
-﻿.hide-cookie-monster .cookie-monster {
+﻿/**
+ * COOKIE MONSTER
+ *
+ * The cookie popup for new users
+ */
+
+.hide-cookie-monster .cookie-monster {
     display: none;
 }
 
