--- a/libs/site.less
+++ b/libs/site.less
@@ -39,7 +39,7 @@
 	@import "existing/inc/framework";
 
 	// Modules
-	@import "existing/inc/cookie-monster";
+	//@import "existing/inc/cookie-monster";
 	//@import "existing/inc/skip-nav";
 	@import "existing/inc/main-nav";
 	//@import "existing/inc/breadcrumb";
@@ -146,3 +146,4 @@
 @import "modules/skip-nav";
 @import "modules/side-links";
 @import "modules/side-chat";
+@import "modules/cookie-monster";
