Callouts, Panels, Highlights
- Combined modules/callouts, panels, and highlights into
modules/callouts.
- Updated panels and highlights to both use the callout mixin

--- a/libs/existing/inc/highlight.less
+++ b/libs/existing/inc/highlight.less
@@ -13,9 +13,11 @@
 }
 
 .highlight--error {
-  background: lighten( @red, 60% );
-  padding: .5em 1em;
-  border-left: 3px solid @red;
+  .callout(
+    @callout-background: lighten( @red, 60% ),
+    @callout-border: @red
+  );
+  .callout--border--left;
 }
 
 // Boxes
