--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -12,7 +12,7 @@
 		@callout-border: darken(@callout-background, 25%) 
 	){
 
-    padding: 0 @box-spacing-horizontal @box-spacing-vertical @box-spacing-horizontal;
+    padding: @box-spacing-vertical @box-spacing-horizontal @box-spacing-vertical @box-spacing-horizontal;
     margin: @box-spacing-vertical 0;
     background-color: @callout-background;
     color: @callout-text;
@@ -26,7 +26,7 @@
 		border-bottom-color: @callout-border;
 	}
     > *:first-child {
-    	padding-top: @box-spacing-vertical;
+    	padding-top: 0;
     }
     h1:first-child,
     h2:first-child,
@@ -35,6 +35,7 @@
     h5:first-child,
     h6:first-child {
     	margin-top: 0;
+    	padding-top: 0;
     }
     li:first-child {
     	padding-top: 0;
