--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -4,6 +4,7 @@
  * Creates various callout styles using mixin
  * .callout( @callout-background, @callout-headings, @callout-text, @callout-border )
  */
+
 .callout {
 
 	// Unstyled
@@ -84,4 +85,171 @@
     	);
     }
 
+}
+
+/**
+ * HIGHLIGHTS
+ *
+ * Replacing old callout styles with new mixin.
+ */
+
+.highlight {
+  .callout(
+    @callout-background: lighten( @blue, 58% ),
+    @callout-border: @blue
+  );
+  .callout--border--left;
+}
+
+.highlight--warning {
+  .callout(
+    @callout-background: lighten( @orange, 40% ),
+    @callout-border: @orange
+  );
+  .callout--border--left;
+}
+
+.highlight--error {
+  .callout(
+    @callout-background: lighten( @red, 60% ),
+    @callout-border: @red
+  );
+  .callout--border--left;
+}
+
+// Obsolete
+.sideContent:extend( .box all ) {
+
+    & > h3 {
+        // This should really be a h2
+        margin: 0;
+        font-size: 1.6em;
+    }
+
+    // Extend is broken on media selectors in dotless
+    @media (max-width: @screen-sm-max ) {
+        margin: 0 0 1em 1em;
+    }
+    
+    @media( max-width: @screen-xs-max ) {
+        float: none;
+        clear: none;
+        width: auto;
+        margin: 0;
+    }
+}
+
+// Obsolete
+.inlineContent:extend( .box all ) {
+    
+    overflow: hidden; // Allows the div to wrap around floated divs
+
+    & > h3 {
+        // This should really be a h2
+        margin: 0;
+        font-size: 1.6em;
+    }
+}
+
+/**
+ * PANELS
+ *
+ * These are the functional boxes used for callouts and indicators 
+ */
+
+.dap-panel .dap-panel--base {
+    .callout( @beta-blue-lighter, @beta-blue-light ); .callout--border; .callout--border--left; // .callout
+}
+
+// Crucial – this is for only the most important mandatory tasks, we must use this sparingly.
+.dap-panel--crucial {
+    .callout( @beta-red-lighter, @beta-red ); .callout--border--left; // .callout--warning
+}
+
+// Important – these are for generally important actions clients need to take but are not mandatory.
+.dap-panel--important {
+    .callout( @beta-yellow-light ); .callout--border--left; // .callout--alert
+}
+
+// Progress panel - for instructional information, primarily used for 'Next stages'.
+.dap-panel--progress {
+    .callout( @generous-mauve, @generous-green ); // .callout--generous
+}
+
+// Adviser box - extending to style the adviser only content.
+.dap-panel--adviser {
+    .callout( @beta-yellow-light ); .callout--border--left; // .callout--alert
+
+}
+
+// Example box - extending to style examples within content.
+.dap-panel--example {
+    .callout( @white, @gray-2 ); .callout--border; .callout--border--left; // .callout--quote
+}
+
+/************************************************************************
+ * Side panels - extending to style the panels that will run down the left-hand menu.
+ */
+
+// Primary sidebar panel
+.dap-panel--side__blue {
+    background-color: @gray-3;
+    border-top: 4px solid @heritage-blue;
+
+    .h2 {
+      font-size: @font-size-medium;
+      color: @heritage-blue;
+    }
+
+    .h3 {
+      font-size: @font-size-base;
+      color: @text-color;
+    }
+    
+    .p {
+      font-size: @font-size-base;
+      color: @text-color;
+    }
+}
+
+// Advisory sidebar panel
+.dap-panel--side__yellow {
+    background-color: @gray-3;
+    border-top: 4px solid @beta-yellow;
+
+    .h2 {
+      font-size: @font-size-medium;
+      color: @heritage-blue;
+    }
+
+    .h3 {
+      font-size: @font-size-base;
+      color: @text-color;
+    }
+    
+    .p {
+      font-size: @font-size-base;
+      color: @text-color;
+    }
+}
+
+// Additional sidebar help panel
+.dap-panel--side__aqua {
+    background-color: @gray-3;
+    border-top: 4px solid @beta-aqua;
+
+    .h2 {
+      font-size: @font-size-medium;
+      color: @heritage-blue;
+    }
+
+    .h3 {
+      font-size: @font-size-base;
+      color: @text-color;
+    }
+    
+    .p {
+      font-size: @font-size-base;
+      color: @text-color;
+    }
 }
