--- a/libs/site.less
+++ b/libs/site.less
@@ -29,7 +29,7 @@
 	//@import "existing/inc/helpers";
 	//@import "existing/inc/global"; // Moved to base
 	@import "existing/inc/boxes";
-	@import "existing/inc/highlight";
+	//@import "existing/inc/highlight"; // Compiled into modules/callouts
 
 	//@import "existing/inc/buttons"; // Moved to base
 	//@import "existing/inc/forms";
@@ -92,8 +92,8 @@
 		//@import "existing/inc/beta/sidebar-navigation";
 		//@import "existing/inc/beta/sidebar-navigation-accordion";
 		//@import "existing/inc/beta/breadcrumb";
-		//@import "existing/inc/beta/section-notice"; Moved to modules
-		//@import "existing/inc/beta/panels";
+		//@import "existing/inc/beta/section-notice"; // Moved to modules
+		//@import "existing/inc/beta/panels"; // Compiled into modules/callouts
 		//@import "existing/inc/beta/extent-switcher";
 		//@import "existing/inc/beta/revealable";
 		//@import "existing/inc/beta/boxes";
@@ -124,7 +124,6 @@
 @import "modules/tablesort";
 @import "modules/nav-steps";
 @import "modules/navigation";
-@import "modules/panels";
 @import "modules/section-notice";
 @import "modules/decision-tree";
 @import "modules/extent-switcher";
