Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit 896c53b3fcaaa2082dad9ab2cb9a6422a1ec1797, reversing
changes made to f6c2ed10d9199285f022e9c70a388c15426c9baf.

--- a/libs/existing/inc/highlight.less
+++ b/libs/existing/inc/highlight.less
@@ -13,11 +13,9 @@
 }
 
 .highlight--error {
-  .callout(
-    @callout-background: lighten( @red, 60% ),
-    @callout-border: @red
-  );
-  .callout--border--left;
+  background: lighten( @red, 60% );
+  padding: .5em 1em;
+  border-left: 3px solid @red;
 }
 
 // Boxes
