Moved accordion into collapse
- Moved accordions into collapse
- Split collapse into module and mixin

--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -3,6 +3,7 @@
  *
  * Creates various callout styles using mixin
  * .callout( @callout-background, @callout-headings, @callout-text, @callout-border )
+ * Whole callouts can be automatically calculated by entering only one colour.
  */
 
 .callout {
