--- a/libs/site.less
+++ b/libs/site.less
@@ -28,7 +28,7 @@
 	//@import "existing/inc/icons"; // Merged into base/icons.less
 	//@import "existing/inc/helpers";
 	//@import "existing/inc/global"; // Moved to base
-	@import "existing/inc/boxes";
+	//@import "existing/inc/boxes";
 	//@import "existing/inc/highlight"; // Compiled into modules/callouts
 
 	//@import "existing/inc/buttons"; // Moved to base
@@ -73,7 +73,7 @@
 	@import "existing/inc/plugins";
 	@import "existing/inc/toc";
 	@import "existing/inc/letter";
-	@import "existing/inc/accordion";
+	//@import "existing/inc/accordion";
 	//@import "existing/inc/revealable";
 	//@import "existing/inc/tablesort";
 	//@import "existing/inc/decision-tree";
@@ -112,6 +112,7 @@
 @import "mixins/fit-content";
 @import "mixins/flex-box";
 @import "mixins/limit-width";
+@import "mixins/collapse";
 
 /* Module files */
 @import "modules/header";
