Base, popup, framework
- Merged framework files
- Moved popup into its own mixin
- Removed base/base

--- a/libs/site.less
+++ b/libs/site.less
@@ -18,7 +18,6 @@
 @import "base/type";
 @import "base/utility";
 @import "base/helpers";
-// @import "base/base"; // This file has not been updated as shouldn't have been included
 
 // Existing styles
 	//@import "existing/inc/magic-numbers";
@@ -36,7 +35,7 @@
 	//@import "existing/inc/forms-v2";
 
 
-	@import "existing/inc/framework";
+	//@import "existing/inc/framework";
 
 	// Modules
 	//@import "existing/inc/cookie-monster";
@@ -113,6 +112,7 @@
 @import "mixins/flex-box";
 @import "mixins/limit-width";
 @import "mixins/collapse";
+@import "mixins/popup";
 
 /* Module files */
 @import "modules/header";
