--- a/libs/modules/calls-for-evidence.less
+++ b/libs/modules/calls-for-evidence.less
@@ -1,7 +1,7 @@
 ﻿/**
- * REFERENCES
+ * CALLS FOR EVIDENCE
  *
- * *ASSUMPTION* This is is the file for when users are logged in to record references on links.
+ * Use unknown
  *
  */
 
