--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -1,29 +1,37 @@
-﻿.search-results {
+﻿/**
+ * SEARCH RESULTS
+ *
+ * Styling for the results in the Search results page.
+ * 
+ */
+
+
+.search-results {
     list-style: none;
     padding: 0;
 }
 .search-results__item {
-    margin: 1em 0;
+    margin: @box-spacing-horizontal 0;
 }
 
 .search-results__heading {
-    font-size: 1.2em;
+    font-size: @font-size-medium;
     margin-bottom: 1/1.2*.25em;
 }
 
 .search-results__description {
-    margin: .25em 0;
+    margin: @box-spacing-horizontal*.25 0;
 }
 
 .search-results__section {
     color:#999;
-    margin: .25em 0;
+    margin: @box-spacing-horizontal*.25 0;
 }
 
 .search__spellcheck {
     .highlight--warning;
     a {
-        font-weight: 600;
+        font-weight: @font-weight-bold;
     }
 }
        
