--- a/libs/site.less
+++ b/libs/site.less
@@ -63,13 +63,13 @@
 	//@import "existing/inc/index-page";
 	@import "existing/inc/home-page";
 	@import "existing/inc/login";
-	@import "existing/inc/atoz";
+	//@import "existing/inc/atoz";
 
 	@import "existing/inc/modules";
 	//@import "existing/inc/forms-old";
 	@import "existing/inc/lists";
 	@import "existing/inc/tables";
-	@import "existing/inc/paragraph-numbers.less";
+	//@import "existing/inc/paragraph-numbers.less";
 	@import "existing/inc/plugins";
 	@import "existing/inc/toc";
 	@import "existing/inc/letter";
@@ -145,11 +145,8 @@
 @import "modules/skip-nav";
 @import "modules/side-links";
 @import "modules/side-chat";
-<<<<<<< HEAD
-
-	@import "modules/calls-for-evidence";
-	@import "modules/index-page";
-	@import "modules/search-results";
-=======
+@import "modules/calls-for-evidence";
+@import "modules/search-results";
 @import "modules/cookie-monster";
->>>>>>> origin/master
+@import "modules/paragraph-numbers.less";
+@import "modules/atoz";
